[tool.poetry]
name = "standup"
version = "0.1.0"
description = ""
authors = ["skippi <jbtcao@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
"discord.py" = "^1.2"
peewee = "^3.12"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
pylint = "^2.3"
mypy = "^0.740.0"

[tool.poetry.scripts]
standup = 'standup.shell:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
